Change profile to me

--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -18,7 +18,7 @@
             <div class="navbar-inner">
                 <ul class="nav">
                   <li><a href="/home">Opensn</a></li>
-                  <li><a href="/profile">Profile</a></li>
+                  <li><a href="/me">Me</a></li>
                   <li><a href="/wall">Wall</a></li>                  
                   <li><a href="#">Settings</a></li>
                 <li><a href="/logout">Logout</a></li>
