--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,10 +1,11 @@
     <footer class="row-fluid">
         <section class="well">
-            <h4 class="text-center"><a href="#">About</a>
-|| <a href="#">Terms</a>
-|| <a href="#">Privacy</a>
-|| <a href="#">Blog</a>
-</h4>
+            <h4 class="text-center">
+	               <a href="{% url "aboutus" %}">About</a>
+				|| <a href="{% url "terms" %}">Terms</a>
+				|| <a href="{% url "privacy" %}">Privacy</a>
+				|| <a href="{% url "blog" %}">Blog</a>
+			</h4>
         </section>
     </footer>
     
