--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,6 +1,6 @@
     <footer class="row-fluid">
-        <section class="well">
-            <h4 class="text-center">
+        <section class="">
+            <h4 class="small text-center">
 	               <a href="{% url "aboutus" %}">About</a>
 				|| <a href="{% url "terms" %}">Terms</a>
 				|| <a href="{% url "privacy" %}">Privacy</a>
