--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -1,6 +1,6 @@
         {% block topnav %}
 <header class="row-fluid">
-    <div class="well header">
+    <div class="header">
         <!--  <h1>opesn</h1> -->
          {% comment %}
         {% if user_info.id %}
@@ -16,7 +16,7 @@
 			    </ul>
             </div>
             {% else %}
-            <div class="navbar-inner">
+            <div class="">
                 <ul class="nav">
                   <li><a href="/home">Opensn</a></li>
                   <li><a href="/me">Me</a></li>
