--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,4 +1,4 @@
-.header{background:rgb(208, 210, 238) !important; color:#fff;}
+.header{background:white !important; color:#fff;}
 
 .transparentBG{background:transparent !important;}
 
