footer links css modified

--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,11 +1,11 @@
     <footer class="row-fluid">
         <section class="">
-            <h4 class="small text-center">
+            <div class="text-center flinks">
 	               <a href="{% url "aboutus" %}">About</a>
 				|| <a href="{% url "terms" %}">Terms</a>
 				|| <a href="{% url "privacy" %}">Privacy</a>
 				|| <a href="{% url "blog" %}">Blog</a>
-			</h4>
+			</div>
         </section>
     </footer>
     
