--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,3 +5,12 @@
 .pullLeft0{margin-left:0px !important;}
 
 .border-botm{border-bottom:1px solid #dddddd;margin-bottom:10px;}
+
+.flinks{
+size: 10px;
+color: rgb(238, 240, 241) !important;
+}
+.flinks a{
+size: 10px;
+color: rgb(238, 240, 241) !important;
+}
