Added wall section

--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -4,9 +4,9 @@
 {% block title %} User Profile{% endblock %}
 {% block content %}
 <section class="well span6">
-<img src="/static/{{user_data.profile_image}}" style="height:200px;"/>
+<img src="/static/{{user_data.profile_image}}" class="span4" style="height:200px;"/>
 
-<table class="table" style="">
+<table class="table">
 
 <tr>
     <th  align="left">Name</th>
