remove || in footer. make text a little more visible. should be able to see

--- a/templates/common/footer.html
+++ b/templates/common/footer.html
@@ -1,10 +1,10 @@
     <footer class="row-fluid">
         <section class="">
             <div class="text-center flinks">
-	               <a href="{% url "aboutus" %}">About</a>
-				|| <a href="{% url "terms" %}">Terms</a>
-				|| <a href="{% url "privacy" %}">Privacy</a>
-				|| <a href="{% url "blog" %}">Blog</a>
+	             <a href="{% url "aboutus" %}">About</a>&nbsp;
+				 <a href="{% url "terms" %}">Terms</a>&nbsp;
+				 <a href="{% url "privacy" %}">Privacy</a>&nbsp;
+				 <a href="{% url "blog" %}">Blog</a>
 			</div>
         </section>
     </footer>
