--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -9,7 +9,7 @@
 <form method="post" action="{% url "django.contrib.auth.views.login" %}">{% csrf_token %}
 <table>
 <tr>
-    <td>{{ form.username.label_tag }}</td>
+    <td>E-mail</td>
     <td>{{ form.username }}</td>
 </tr>
 <tr>
