--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -23,8 +23,8 @@
                   <li><a href="#">Settings</a></li>
                 <li><a href="/logout">Logout</a></li>
                 </ul>
-               <form class="navbar-search">
-                   <input type="text" class="search-query" placeholder="Search">
+               <form class="navbar-search" action="/search" method="get">
+                   <input type="text" class="search-query" placeholder="Search" name="q">
                </form>
             </div>
             {% endif %}
