--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -8,7 +8,7 @@
         {% endif %}
          {% endcomment %}
         <div class="navbar pull-right">
-            {% if not user_info.id %}
+            {% if not user.id  %}
             <div class="navbar-inner">
 			    <ul class="nav">
 			      <li><a href="/home">Opensn</a></li>
@@ -20,7 +20,7 @@
                 <ul class="nav">
                   <li><a href="/home">Opensn</a></li>
                   <li><a href="/me">Me</a></li>
-                  <li><a href="#">Settings</a></li>
+                  <li><a href="/settings">Settings</a></li>
                 <li><a href="/logout">Logout</a></li>
                 </ul>
                <form class="navbar-search" action="/search" method="get">
