Link preview partial commit

--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -8,6 +8,11 @@
 <link rel="stylesheet" href="{% static  "/static/css/bootstrap.css" %}" type="text/css" />
 <link rel="stylesheet" href="{% static  "/static/css/custom.css" %}" type="text/css" />
 <link rel="stylesheet" href="{% static  "/static/css/bootstrap-responsive.css" %}" />
+
+<link rel="stylesheet" href="{% static  "/static/css/linkPreview.css" %}" type="text/css" />
+
+<script type="text/javascript" src="/static/js/jquery.js" ></script>
+<script type="text/javascript" src="/static/js/linkPreview.js" ></script>
 </head>
 
 <body>
