--- a/templates/registration/wall.html
+++ b/templates/registration/wall.html
@@ -26,7 +26,7 @@
             <div class="linkPreview">
                 <div id="previewLoading"></div>
                 <div style="float: left;">
-                    <textarea type="text" id="text" /> What's on your mind?</textarea>
+                    <textarea id="text"> What's on your mind?</textarea>
                     <div style="clear: both"></div>
                 </div>
                 <div id="preview">
