--- a/templates/common/base.html
+++ b/templates/common/base.html
@@ -13,6 +13,11 @@
 
 <script type="text/javascript" src="/static/js/jquery.js" ></script>
 <script type="text/javascript" src="/static/js/linkPreview.js" ></script>
+<script>
+    $(document).ready(function(){
+        $('.linkPreview').linkPreview();
+    });
+</script>
 </head>
 
 <body>
