User profile edit and image edit functionality

--- a/templates/customuser/settings.html
+++ b/templates/customuser/settings.html
@@ -34,8 +34,10 @@
 <table>
     <tr>
         <td><a href="/password/change">Change Password</a></td>
-        
     </tr>
+    <tr>
+        <td><a href="/profile/edit">Edit Profile</a></td>
+    </tr>    
 </table>
 </section>
 {% endblock %}
