--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -5,6 +5,7 @@
 {% block content %}
 {% load to_json %}
 
+{% if message %} <div class="text-info">{{message}}</div> {% endif %}
 
 <section class="well span6">
 <img src="/static/{{user_data.profile_image}}" class="span4" style="height:200px;"/>
