--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -20,6 +20,7 @@
                 <ul class="nav">
                   <li><a href="/home">Opensn</a></li>
                   <li><a href="/me">Me</a></li>
+                  <li><a href="/friends">Friends</a></li>
                   <li><a href="/settings">Settings</a></li>
                 <li><a href="/logout">Logout</a></li>
                 </ul>
