--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -18,6 +18,7 @@
             {% else %}
             <div class="">
                 <ul class="nav">
+                  <li><a href="/messages"><img src="/static/img/mail.png" style="height:30px;"></a></li>
                   <li><a href="/home">Opensn</a></li>
                   <li><a href="/me">Me</a></li>
                   <li><a href="/friends">Friends</a></li>
