--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -14,3 +14,13 @@ color: rgb(187, 190, 192) !important;
 size: 10px;
 color: rgb(187, 190, 192) !important;
 }
+
+
+/*voting style */
+.voting_wrapper {display:inline-block;margin-left: 20px;}
+.voting_wrapper .down_button {background: url(/static/img/thumbs.png) no-repeat;float: left;height: 14px;width: 16px;cursor:pointer;margin-top: 3px;}
+.voting_wrapper .down_button:hover {background: url(/static/img/thumbs.png) no-repeat 0px -16px;}
+.voting_wrapper .up_button {background: url(/static//img/thumbs.png) no-repeat -16px 0px;float: left;height: 14px;width: 16px;cursor:pointer;}
+.voting_wrapper .up_button:hover{background: url(/static/img/thumbs.png) no-repeat -16px -16px;;}
+.voting_btn{float:left;margin-right:5px;}
+.voting_btn span{font-size: 11px;float: left;margin-left: 3px;}
