--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -87,3 +87,12 @@ a{
 	background-color: #000;
 	display:block;
 }
+
+/*voting style */
+.voting_wrapper {display:inline-block;margin-left: 20px;}
+.voting_wrapper .down_button {background: url(/static/img/thumbs.png) no-repeat;float: left;height: 14px;width: 16px;cursor:pointer;margin-top: 3px;}
+.voting_wrapper .down_button:hover {background: url(/static/img/thumbs.png) no-repeat 0px -16px;}
+.voting_wrapper .up_button {background: url(/static//img/thumbs.png) no-repeat -16px 0px;float: left;height: 14px;width: 16px;cursor:pointer;}
+.voting_wrapper .up_button:hover{background: url(/static/img/thumbs.png) no-repeat -16px -16px;;}
+.voting_btn{float:left;margin-right:5px;}
+.voting_btn span{font-size: 11px;float: left;margin-left: 3px;}
